<resources>
    <string name="app_name">CampusNet</string>
    <string name="please_input_phone">请输入手机号码</string>
    <string name="please_input_phoneCode">请输入手机验证码</string>
    <string name="login">登录</string>
    <string name="registe">注册</string>
    <string name="lookup">逛一逛</string>
    <string name="user_agreement">/  用户协议  /</string>
    <string name="select_school">选择就读的学校</string>
    <string name="search_school">搜索学校</string>
    <string name="school_authentic">学校认证</string>
    <string name="personal_authentic">个人信息</string>
    <string name="phone_authentic">注册完成</string>
    <string name="near_school">/  附近的学校  /</string>

    <string name="settings">设置</string>

    <!-- time -->
    <string name="time_today">今天</string>
    <string name="time_yesterday">昨天</string>
    <string name="time_day">日</string>
    <string name="time_month">月</string>
    <string name="time_year">年</string>
</resources>
