<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/gray_bkg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/topbar_height"
        android:background="@color/white_bkg"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">

        <com.mikepenz.iconics.view.IconicsImageView
            android:id="@+id/iv_back"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:onClick="back"
            android:layout_gravity="center_vertical"
            app:iiv_color="@color/text_info"
            app:iiv_icon="typ-arrow-left"
            android:layout_centerVertical="true"
            android:tag="@{click->backToLogin}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_s"
            android:text="@string/select_school"
            android:layout_toRightOf="@+id/iv_back"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:tag="@{model->page.schoolTitle}"/>

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_default"
            android:text="@string/search_school"
            android:textSize="@dimen/text_xs"
            android:textColor="@color/text_gray"
            android:gravity="center"
            android:padding="5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:tag="@{click->searchSchool}"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_registe_progressbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_xs"
            android:gravity="center"
            android:text="@string/school_authentic"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_xs"
            android:gravity="center"
            android:text="@string/personal_authentic"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_xs"
            android:gravity="center"
            android:text="@string/phone_authentic"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_xs"
        android:textColor="@color/text_gray"
        android:padding="10dp"
        tools:text="学校认证是为了让社交信息更加真实，但是我们绝对不会泄漏您的隐私信息"
        android:tag="@{model->page.tip}"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white_bkg"
            android:tag="@{model->page.schoolpart}">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_s"
                android:text="@string/near_school"
                android:padding="10dp"/>

            <com.campus.android_bind.view.NgRecyclerView
                android:id="@+id/rv_nearschools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:tag="@{model->user.schoolsnear}"
                app:type="grid"
                app:span="3"
                app:orientation="vertical">

                <com.campus.android_bind.view.NgItemView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutId="@layout/item_near_school_registe"
                    app:model="school"/>

            </com.campus.android_bind.view.NgRecyclerView>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>